fixs alignment logo

--- a/react-burger/src/components/BurgerConstructor/styles.module.css
+++ b/react-burger/src/components/BurgerConstructor/styles.module.css
@@ -1,26 +1,31 @@
 .constructor_section {
-	display: grid;
-	max-width: max-content;
-	width: 600px;
-	align-self: start;
-	justify-self: start;
+  display: grid;
+  max-width: max-content;
+  width: 600px;
+  align-self: start;
+  justify-self: start;
 }
 
 .constructor_container {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .constructor_footer {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .constructor_drag_item {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.price-block {
+  width: fit-content;
 }
